fixed row wrapping, moderator can see all cards

--- a/src/client/stylesheets/card.css
+++ b/src/client/stylesheets/card.css
@@ -8,6 +8,9 @@ h2#cardCategory{
 	margin-right: 20px;
 }
 
+div#displayGrid{
+	margin-top: 25px;
+}
 #cardRow{
 	margin-left: 10%;
 }
