--- a/src/client/stylesheets/room.css
+++ b/src/client/stylesheets/room.css
@@ -34,6 +34,10 @@ div.form-modal{
   margin-top: -11%;
   float: right;
 }
+#categoryHeader{
+  font-size: 4em;
+  text-align: center;
+}
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   .card-form form div.form-group {
